[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "a-maze-ing"
version = "0.1.0"
description = "Maze generator and CLI"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
"pydantic>=2.10,<3"
]

[project.optional-dependencies]
dev = [
"flake8==7.1.1",
"mypy==1.11.2",
"build>=1.2.2"
]

[project.scripts]
a-maze-ing = "a_maze_ing:main"

[tool.setuptools]
py-modules = ["a_maze_ing"]

[tool.setuptools.packages.find]
include = ["mazegen*"]